# TraderAI

./: .actions_today.json  .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
core/: alpaca_broker.py  chart_fetcher.py  discord_notifier.py  ingestion.py  rss_fetcher.py
core/alpaca/: __init__.py  account.py  cache.py  client.py  historical.py  market_data.py  orders.py  portfolio.py
core/cache/: __init__.py  base.py  config.py  memory.py  streamlit.py
core/providers/: __init__.py  alpaca_provider.py  base.py  chains.py  composite_provider.py  yfinance_provider.py
dashboard/: __init__.py  app.py  helpers.py  style.css
dashboard/core/: __init__.py  analysis.py  session.py
dashboard/tabs/: analysis.py  charts.py  dashboard.py  decisions.py  news.py  pipeline.py  stocks.py  tab_analysis.py  tab_charts.py  tab_dashboard.py  tab_news.py  tab_pipeline.py  tab_stocks.py  transactions.py
dashboard/utils/: __init__.py  charts.py  data.py  models.py  storage.py  validation.py
docs/: CACHING.md
graph/: consts.py  graph.py  orchestrator.py  state.py
graph/chains/: __init__.py  chart_analyzer.py  config.py  factory.py  news_analyzer.py  trading_decision.py
graph/context/: __init__.py  base.py  formatters.py  portfolio.py
graph/nodes/: __init__.py  analyze.py  execute_decision.py  retrieve_chart.py  retrieve_news.py  retrieve_portfolio.py
testing/: alpacaAPI.py  test_decision_execution.py
trader_agent/: __init__.py  config.py  main.py
trader_agent/core/: __init__.py  chart_fetcher.py  discord_notifier.py  ingestion.py  rss_fetcher.py
trader_agent/dashboard/: app.py  helpers.py  ticker_loop.py
trader_agent/graph/: __init__.py  consts.py  graph.py  (+1 more)
(+15 files in other folders)
