[project]
name = "trader-agent"
version = "0.2.0"
description = "LLM-powered stock trading agent with RSS news + chart analysis, LangGraph pipeline, Discord notifications, and Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.0",
    "filelock>=3.20.3",
    "langchain>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=0.2.0",
    "plotly>=5.18.0",
    "psutil>=7.2.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.30.0",
    "streamlit-autorefresh>=1.0.1",
    "tavily>=1.1.0",
    "tiktoken>=0.12.0",
    "watchdog>=6.0.0",
    "yfinance>=0.2.30",
]

[project.scripts]
trader-agent = "trader_agent.main:main"
